force ipsum on home page

--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,3 +1,4 @@
 .body {
   background-image: url(https://d3u67r7pp2lrq5.cloudfront.net/product_photos/79307239/file_56190258f1_original.jpg);
+  color: red;
 }
