--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,4 +1,34 @@
 .body {
   background-image: url(https://d3u67r7pp2lrq5.cloudfront.net/product_photos/79307239/file_56190258f1_original.jpg);
-  color: red;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: 95rem;
+  background-color: black;
+  height: 100%;
+  color: #fff;
+  background-color: black;
+  margin: 0, auto;
+}
+
+.home {
+  background-color: black;
+}
+
+strong {
+  color: gold;
+  /* background-color: ; */
+}
+
+p {
+  color: #fff;
+  font-weight: bold;
+}
+
+.description {
+  background-color: black;
+  opacity: 90%;
+}
+
+div.extra {
+  height: 50rem;
 }
